--- a/todo.html
+++ b/todo.html
@@ -151,6 +151,8 @@
               }); 
           }
 
+          //ASSIGNMENT IS  TO STYLE THIS TODO PROJECT TO LOOK LIKE GOOGLE TO DO LIST AT YOUR LEISURE
+
       </script>
   </body>
 </html>
